prqlc/prql-compiler/tests/integration/snapshots/integration__results@read_csv.prql.snap
---
source: prqlc/prql-compiler/tests/integration/main.rs
description: "# Running on dialect `duckdb`\n\n# Query:\n---\n# sqlite:skip\n# postgres:skip\n# mysql:skip\nfrom (read_csv \"tests/integration/data/chinook/media_types.csv\")\nsort media_type_id\n"
expression: "# sqlite:skip\n# postgres:skip\n# mysql:skip\nfrom (read_csv \"tests/integration/data/chinook/media_types.csv\")\nsort media_type_id\n"
input_file: prqlc/prql-compiler/tests/integration/queries/read_csv.prql
---
1,MPEG audio file
2,Protected AAC audio file
3,Protected MPEG-4 video file
4,Purchased AAC audio file
5,AAC audio file
