prqlc/prql-compiler/tests/integration/snapshots/integration__sql@distinct.prql.snap
---
source: prqlc/prql-compiler/tests/integration/main.rs
expression: "# mssql:test\nfrom tracks\nselect {album_id, genre_id}\ngroup tracks.* (take 1)\nsort tracks.*\n"
input_file: prqlc/prql-compiler/tests/integration/queries/distinct.prql
---
WITH table_0 AS (
  SELECT
    DISTINCT album_id,
    genre_id
  FROM
    tracks
)
SELECT
  album_id,
  genre_id
FROM
  table_0
ORDER BY
  album_id,
  genre_id

