prqlc/prql-compiler/tests/integration/snapshots/integration__sql@genre_counts.prql.snap
---
source: prqlc/prql-compiler/tests/integration/main.rs
expression: "# clickhouse:skip (ClickHouse prefers aliases to column names https://github.com/PRQL/prql/issues/2827)\n# mssql:test\nlet genre_count = (\n    from genres\n    aggregate {a = count name}\n)\n\nfrom genre_count\nfilter a > 0\nselect a = -a\n"
input_file: prqlc/prql-compiler/tests/integration/queries/genre_counts.prql
---
WITH genre_count AS (
  SELECT
    COUNT(*) AS a
  FROM
    genres
)
SELECT
  - a AS a
FROM
  genre_count
WHERE
  a > 0

